Add invariant check