@@ -26,41 +26,54 @@
  * @modules java.base/jdk.internal.foreign
  * @library /test/lib
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=0
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=1
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=2
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=3
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=4
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=5
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=6
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=7
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=-1
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=23847682736221
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Djava.lang.foreign.native.confined.pool.power.size=TEXT
  *                    TestConfinedSegmentPoolDefensiveRelease
  * @run junit/othervm --add-opens=java.base/java.lang=ALL-UNNAMED
+ *                    --add-opens=java.base/jdk.internal.foreign=ALL-UNNAMED
  *                    -Dsun.nio.PageAlignDirectMemory=true
  *                    -Djava.lang.foreign.native.confined.pool.power.size=PAGE_ALIGN
  *                    TestConfinedSegmentPoolDefensiveRelease
@@ -75,6 +88,8 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.lang.IllegalStateException;
 import java.lang.foreign.Arena;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Stream;
 
@@ -84,6 +99,7 @@ final class TestConfinedSegmentPoolDefensiveRelease {
 
     static final long SIZE = 42;
     static final long OUT_OF_SIZE = 1_024;
+    static final Method RELEASE = releaseMethod();
 
     @ParameterizedTest
     @MethodSource("threadFactories")
@@ -91,7 +107,7 @@ final class TestConfinedSegmentPoolDefensiveRelease {
         AtomicReference<Throwable> failure = new AtomicReference<>();
         Thread untouchedThread = threadBuilder.factory().newThread(() -> {
             try {
-                assertThrows(IllegalStateException.class, () -> ConfinedSegmentPool.release(Thread.currentThread(), SIZE));
+                assertThrows(IllegalStateException.class, () -> release(Thread.currentThread(), SIZE));
             } catch (Throwable throwable) {
                 failure.set(throwable);
             }
@@ -115,7 +131,7 @@ final class TestConfinedSegmentPoolDefensiveRelease {
         try (Arena arena = Arena.ofConfined()){
             arena.allocate(1);
         }
-        assertThrows(IllegalStateException.class, () -> ConfinedSegmentPool.release(Thread.currentThread(), SIZE));
+        assertThrows(IllegalStateException.class, () -> release(Thread.currentThread(), SIZE));
     }
 
     @Test
@@ -129,7 +145,7 @@ final class TestConfinedSegmentPoolDefensiveRelease {
         if (ConfinedSegmentPool.pooledMemorySize() > 0) {
             try (Arena arena = Arena.ofConfined()) {
                 arena.allocate(1);
-                assertThrows(AssertionError.class, () -> ConfinedSegmentPool.release(Thread.currentThread(), OUT_OF_SIZE));
+                assertThrows(AssertionError.class, () -> release(Thread.currentThread(), OUT_OF_SIZE));
             }
         }
     }
@@ -137,6 +153,24 @@ final class TestConfinedSegmentPoolDefensiveRelease {
     @Test
     void releaseIllegalSizeVt() {
         VThreadRunner.run(this::releaseIllegalSize);
+    }
+
+    static void release(Thread thread, long size) throws Throwable {
+        try {
+            RELEASE.invoke(null, thread, size);
+        } catch (InvocationTargetException ex) {
+            throw ex.getCause();
+        }
+    }
+
+    static Method releaseMethod() {
+        try {
+            Method method = ConfinedSegmentPool.class.getDeclaredMethod("release", Thread.class, long.class);
+            method.setAccessible(true);
+            return method;
+        } catch (ReflectiveOperationException ex) {
+            throw new ExceptionInInitializerError(ex);
+        }
     }
 
 }
